deploy/manifests/local/bases/website/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: website
  namespace: hubrise-www
  labels:
    app: website

spec:
  rules:
    - host: www.local
      http:
        paths:
          - backend:
              serviceName: website
              servicePort: 80
